<resources>
    <string name="app_name">Mematic PUM</string>
    <string name="upload_success">Uploaded successfully.</string>
    <string name="upload_failure">Something went wrong.</string>
    <string name="generic_error">Something went wrong.</string>
    <string name="values">upload_success</string>
    <string name="title_activity_share">Share</string>
    <string name="upload_image">Upload image</string>
    <string name="loading">Loading...</string>
    <string name="uploading">Uploading...</string>
    <string name="show_images">Show images</string>
    <string name="select_picture">Select Picture</string>
    <string name="edit_image">Edit Image</string>
    <string name="show_list">Show List</string>
    <string name="share_image">Share Image</string>
</resources>