<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/uploadImageContainer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:src="@drawable/template1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/SelectPicture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/select_picture"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/buttonLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/SelectPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/editImageButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="@string/edit_image" />

        <Button
            android:id="@+id/ShareImagesButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="@string/share_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/showImagesButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="@string/show_images" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="@string/upload_image" />

    </LinearLayout>

    <TextView
        android:id="@+id/uploadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploading"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/uploadProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/uploadTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/showListButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/show_list"
        android:visibility="invisible"
        ads:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadProgressBar"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/showListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/showListButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-30dp" />

    <ProgressBar
        android:id="@+id/showListProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/showListTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMemeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showImagesButton"
        tools:ignore="NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>
